--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,7 @@ html
 
   head
     title Notes
-    link(rel='stylesheet' href='/static.main.css')
+    link(rel='stylesheet' href='/static/main.css')
 
   body
 
